force-app/main/default/objects/Registration__c/Registration__c.object-meta.xml
<CustomObject>
    <label>State Registration</label>
    <nameField>
        <label>Registration  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>State Registrations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>