force-app/main/default/objects/Registration__c/fields/Administration_Management_and_General__c.field-meta.xml
<CustomField>
    <fullName>Administration_Management_and_General__c</fullName>
    <formula>Program__r.X25_C_Management_and_general_expenses__c</formula>
    <label>Administration-Management and General:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>