force-app/main/default/objects/Registration__c/fields/Aggregate_amount_paid_to_professional__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_amount_paid_to_professional__c</fullName>
    <formula>Program__r.Line_11_e_Professional_Fundraising_Fees__c</formula>
    <inlineHelpText>Aggregate amount paid to professional fund raisers and counsel</inlineHelpText>
    <label>Aggregate amount paid to professional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>