force-app/main/default/objects/Registration__c/fields/All_other_expenses__c.field-meta.xml
<CustomField>
    <fullName>All_other_expenses__c</fullName>
    <formula>Program__r.X25_A_Total_Expenses__c - Program__r.X25_B_Program_Service_expenses__c</formula>
    <label>All other expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>