force-app/main/default/objects/Registration__c/fields/All_Other_Revenue__c.field-meta.xml
<CustomField>
    <fullName>All_Other_Revenue__c</fullName>
    <formula>Program__r.X12_Total_Revenue__c - Program__r.X8_Contributions_and_Grants__c</formula>
    <label>All Other Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>