force-app/main/default/objects/Registration__c/fields/Amt_of_contributions_received_in_last_FY__c.field-meta.xml
<CustomField>
    <fullName>Amt_of_contributions_received_in_last_FY__c</fullName>
    <formula>Program__r.X1h_Total__c</formula>
    <label>Amt of contributions received in last FY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>