force-app/main/default/objects/Registration__c/fields/Amt_org_receive_from_govt_grants__c.field-meta.xml
<CustomField>
    <fullName>Amt_org_receive_from_govt_grants__c</fullName>
    <formula>Program__r.X1e_Government_Grants__c</formula>
    <inlineHelpText>26. Amount organisation receive from governament grants or private foundations</inlineHelpText>
    <label>26.Amt org receive from govt. grants</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>