force-app/main/default/objects/Registration__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>990-PF</fullName>
                <isActive>false</isActive>
                <label>990-PF</label>
            </value>
            <value>
                <fullName>999-EZ</fullName>
                <isActive>false</isActive>
                <label>999-EZ</label>
            </value>
            <value>
                <fullName>IRS 990</fullName>
                <isActive>false</isActive>
                <label>IRS 990</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>