force-app/main/default/objects/Registration__c/fields/B_Program_service_expenses__c.field-meta.xml
<CustomField>
    <fullName>B_Program_service_expenses__c</fullName>
    <formula>Program__r.X25_B_Program_Service_expenses__c</formula>
    <label>(B) Program service expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>