force-app/main/default/objects/Registration__c/fields/Beginning_of_Year_Net_Assets__c.field-meta.xml
<CustomField>
    <fullName>Beginning_of_Year_Net_Assets__c</fullName>
    <formula>Program__r.Net_assets_or_fund_balances__c</formula>
    <label>Beginning of Year Net Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>