force-app/main/default/objects/Registration__c/fields/Charity_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Charity_Total_Revenue__c</fullName>
    <formula>Program__r.X12_1_Total_Revenue__c</formula>
    <label>Charity Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>