force-app/main/default/objects/Registration__c/fields/Contribution__c.field-meta.xml
<CustomField>
    <fullName>Contribution__c</fullName>
    <formula>Program__r.X1h_Total__c - Program__r.X1e_Government_Grants__c</formula>
    <label>Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>