force-app/main/default/objects/Registration__c/fields/Contributions__c.field-meta.xml
<CustomField>
    <fullName>Contributions__c</fullName>
    <formula>Program__r.X8_Contributions_and_Grants__c</formula>
    <label>Contributions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>