force-app/main/default/objects/Registration__c/fields/Contributions_D__c.field-meta.xml
<CustomField>
    <fullName>Contributions_D__c</fullName>
    <formula>Program__r.X1f_All_Other_Contributions__c</formula>
    <label>Contributions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>