force-app/main/default/objects/Registration__c/fields/Contributions_from_the_public__c.field-meta.xml
<CustomField>
    <fullName>Contributions_from_the_public__c</fullName>
    <formula>Program__r.X1e_Government_Grants__c</formula>
    <label>Contributions from the public</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>