force-app/main/default/objects/Registration__c/fields/Contributions_gifts_grants_and_amount__c.field-meta.xml
<CustomField>
    <fullName>Contributions_gifts_grants_and_amount__c</fullName>
    <formula>Program__r.X8_Contributions_and_Grants__c</formula>
    <label>Contributions, gifts, grants, and amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>