force-app/main/default/objects/Registration__c/fields/D_Gross_Public_support_contributions__c.field-meta.xml
<CustomField>
    <fullName>D_Gross_Public_support_contributions__c</fullName>
    <formula>Program__r.X1h_Total__c -( Program__r.X1b_Membership_Dues__c + Program__r.X1e_Government_Grants__c )+ Program__r.X2g_Total__c + Program__r.X8a_Gross_income_from_fundraising_events__c + Program__r.X9a_Gross_income_from_gaming_activities__c + Program__r.X10a_Gross_sales_of_inventory__c</formula>
    <inlineHelpText>D) Gross Public support, contributions, &amp; program service:</inlineHelpText>
    <label>D) Gross Public support, contributions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>