force-app/main/default/objects/Registration__c/fields/Donor_Advised__c.field-meta.xml
<CustomField>
    <fullName>Donor_Advised__c</fullName>
    <formula>Program__r.X6d_Net_rental_income_or_loss__c</formula>
    <label>Donor Advised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>