force-app/main/default/objects/Registration__c/fields/E_Fundraising_costs_as_a_percentage__c.field-meta.xml
<CustomField>
    <fullName>E_Fundraising_costs_as_a_percentage__c</fullName>
    <formula>Program__r.X25_D_Fundraising_Expenses_Total__c / Program__r.X1h_Total__c</formula>
    <inlineHelpText>E. Fundraising costs as a percentage of contributions:</inlineHelpText>
    <label>E. Fundraising costs as a percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>