force-app/main/default/objects/Registration__c/fields/E_Government_grants_membership_dues__c.field-meta.xml
<CustomField>
    <fullName>E_Government_grants_membership_dues__c</fullName>
    <formula>Program__r.X1b_Membership_Dues__c + Program__r.X1e_Government_Grants__c</formula>
    <label>E) Government grants &amp; membership dues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>