force-app/main/default/objects/Registration__c/fields/E_Total_expenses__c.field-meta.xml
<CustomField>
    <fullName>E_Total_expenses__c</fullName>
    <formula>Program__r.X25_A_Total_Expenses__c</formula>
    <label>(E) Total expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>