force-app/main/default/objects/Registration__c/fields/Excess_Deficit__c.field-meta.xml
<CustomField>
    <fullName>Excess_Deficit__c</fullName>
    <formula>Program__r.X19_Revenue_less_expenses__c</formula>
    <label>Excess/Deficit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>