force-app/main/default/objects/Registration__c/fields/Extensions__c.field-meta.xml
<CustomField>
    <fullName>Extensions__c</fullName>
    <label>Extensions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Ltr and form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>