force-app/main/default/objects/Registration__c/fields/F_FR_costs_mgmt_costs_as_a__c.field-meta.xml
<CustomField>
    <fullName>F_FR_costs_mgmt_costs_as_a__c</fullName>
    <formula>( Program__r.X25_D_Fundraising_Expenses_Total__c + Program__r.X25_C_Management_and_general_expenses__c) / Program__r.X1h_Total__c</formula>
    <inlineHelpText>F. FR costs + mgmt costs as a % of contributions:</inlineHelpText>
    <label>F. FR costs + mgmt costs as a %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>