force-app/main/default/objects/Registration__c/fields/F_Fundraising_expenses_as_a_percentage__c.field-meta.xml
<CustomField>
    <fullName>F_Fundraising_expenses_as_a_percentage__c</fullName>
    <formula>Program__r.X25_D_Fundraising_Expenses_Total__c  /  Program__r.X1h_Total__c</formula>
    <inlineHelpText>(F) Fundraising expenses as a percentage of funds raised</inlineHelpText>
    <label>(F) Fundraising expenses as a percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>