force-app/main/default/objects/Registration__c/fields/F_Other_revenue__c.field-meta.xml
<CustomField>
    <fullName>F_Other_revenue__c</fullName>
    <formula>a_Total_Revenue__c -( D_Gross_Public_support_contributions__c + E_Government_grants_membership_dues__c )</formula>
    <label>F) Other revenue:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>