force-app/main/default/objects/Registration__c/fields/Federated_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Federated_Campaign__c</fullName>
    <formula>Program__r.X1a_Federated_campaigns__c</formula>
    <label>Federated Campaign</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>