force-app/main/default/objects/Registration__c/fields/Fund_raising_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Fund_raising_Expenses__c</fullName>
    <formula>Program__r.X25_D_Fundraising_Expenses_Total__c</formula>
    <label>Fund-raising Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>