force-app/main/default/objects/Registration__c/fields/Fundraising__c.field-meta.xml
<CustomField>
    <fullName>Fundraising__c</fullName>
    <formula>Program__r.X25_D_Fundraising_Expenses_Total__c</formula>
    <label>Fundraising:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>