force-app/main/default/objects/Registration__c/fields/Fundraising_costs_as_a_of_contribution__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_costs_as_a_of_contribution__c</fullName>
    <formula>Program__r.X25_D_Fundraising_Expenses_Total__c / Program__r.X1f_All_Other_Contributions__c</formula>
    <inlineHelpText>Fundraising costs as a percentage of contributions received</inlineHelpText>
    <label>Fundraising costs as a % of contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>