force-app/main/default/objects/Registration__c/fields/Fundraising_Events__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Events__c</fullName>
    <formula>Program__r.X1c_Fundraising_events__c</formula>
    <label>Fundraising Events</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>