force-app/main/default/objects/Registration__c/fields/Fundraising_Joint_Costs__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Joint_Costs__c</fullName>
    <formula>Program__r.X26_D_Fundraising_Expenses_Total__c</formula>
    <label>Fundraising(Joint Costs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>