force-app/main/default/objects/Registration__c/fields/Funds_from_federated_fundraising__c.field-meta.xml
<CustomField>
    <fullName>Funds_from_federated_fundraising__c</fullName>
    <formula>Program__r.X1a_Federated_campaigns__c</formula>
    <label>Funds from federated fundraising</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>