force-app/main/default/objects/Registration__c/fields/FYE_12_31__c.field-meta.xml
<CustomField>
    <fullName>FYE_12_31__c</fullName>
    <label>FYE 12/31</label>
    <type>Date</type>
</CustomField>