force-app/main/default/objects/Registration__c/fields/G_Fundraising_exp_mgmt_general_exp__c.field-meta.xml
<CustomField>
    <fullName>G_Fundraising_exp_mgmt_general_exp__c</fullName>
    <formula>(Program__r.X25_D_Fundraising_Expenses_Total__c +  Program__r.X25_C_Management_and_general_expenses__c) / Program__r.X1h_Total__c</formula>
    <inlineHelpText>(G) Fundraising exp. + mgmt/general exp. as a % of funds raised</inlineHelpText>
    <label>(G) Fundraising exp. + mgmt/general exp.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>