force-app/main/default/objects/Registration__c/fields/G_of_contributions_that_available_for__c.field-meta.xml
<CustomField>
    <fullName>G_of_contributions_that_available_for__c</fullName>
    <formula>100- F_FR_costs_mgmt_costs_as_a__c</formula>
    <inlineHelpText>G. % of contributions that available for charitable purpose:</inlineHelpText>
    <label>G. % of contributions that available for</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>