force-app/main/default/objects/Registration__c/fields/Government_Grants__c.field-meta.xml
<CustomField>
    <fullName>Government_Grants__c</fullName>
    <formula>Program__r.X1e_Government_Grants__c</formula>
    <label>Government Grants</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>