force-app/main/default/objects/Registration__c/fields/Gross_amt_of_the_contributions_collected__c.field-meta.xml
<CustomField>
    <fullName>Gross_amt_of_the_contributions_collected__c</fullName>
    <formula>Program__r.X1h_Total__c</formula>
    <label>Gross amt of the contributions collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>