force-app/main/default/objects/Registration__c/fields/Gross_annual_revenue__c.field-meta.xml
<CustomField>
    <fullName>Gross_annual_revenue__c</fullName>
    <formula>Program__r.G_Gross_Receipts__c</formula>
    <label>Gross annual revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>