force-app/main/default/objects/Registration__c/fields/Gross_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Gross_Contributions__c</fullName>
    <formula>Total_amount_of_funds_solicited_collecte__c - Total_deductions__c</formula>
    <label>Gross Contributions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>