force-app/main/default/objects/Registration__c/fields/Gross_Direct_Public_Support__c.field-meta.xml
<CustomField>
    <fullName>Gross_Direct_Public_Support__c</fullName>
    <formula>Program__r.X1f_All_Other_Contributions__c</formula>
    <label>Gross Direct Public Support</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>