force-app/main/default/objects/Registration__c/fields/Gross_Fund_Raising_and_Gaming_Income__c.field-meta.xml
<CustomField>
    <fullName>Gross_Fund_Raising_and_Gaming_Income__c</fullName>
    <formula>Program__r.X9c_Net_income_or_loss_from_gaming__c + Program__r.X8c_Net_income_or_loss_from_fundraising__c</formula>
    <label>Gross Fund Raising and Gaming Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>