force-app/main/default/objects/Registration__c/fields/Gross_Indirect_Public_Support__c.field-meta.xml
<CustomField>
    <fullName>Gross_Indirect_Public_Support__c</fullName>
    <formula>Program__r.X1a_Federated_campaigns__c + Program__r.X1b_Membership_Dues__c + Program__r.X1c_Fundraising_events__c + Program__r.X1d_Related_Organizations__c</formula>
    <label>Gross Indirect Public Support</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>