force-app/main/default/objects/Registration__c/fields/Gross_Professional_Fundraising_Collectn__c.field-meta.xml
<CustomField>
    <fullName>Gross_Professional_Fundraising_Collectn__c</fullName>
    <formula>Program__r.Amount_paid_to_fundraiser__c</formula>
    <label>Gross Professional Fundraising Collectn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>