force-app/main/default/objects/Registration__c/fields/Gross_Public_support_contributions__c.field-meta.xml
<CustomField>
    <fullName>Gross_Public_support_contributions__c</fullName>
    <formula>Program__r.X1b_Membership_Dues__c</formula>
    <inlineHelpText>Gross Public support, contributions, &amp; program service</inlineHelpText>
    <label>Gross Public support, contributions,</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>