force-app/main/default/objects/Registration__c/fields/Gross_support_and_revenue__c.field-meta.xml
<CustomField>
    <fullName>Gross_support_and_revenue__c</fullName>
    <formula>Program__r.X12_1_Total_Revenue__c - Program__r.X7d_Net_gain_or_loss__c</formula>
    <label>Gross support and revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>