force-app/main/default/objects/Registration__c/fields/H_Operating_charitable_program_expense__c.field-meta.xml
<CustomField>
    <fullName>H_Operating_charitable_program_expense__c</fullName>
    <formula>Program__r.X25_B_Program_Service_expenses__c - Program__r.Lines_1_2_3_Grants_and_similar_amt__c</formula>
    <label>H) Operating charitable program expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>