force-app/main/default/objects/Registration__c/fields/H_Program_services_as_a_percentage_of__c.field-meta.xml
<CustomField>
    <fullName>H_Program_services_as_a_percentage_of__c</fullName>
    <formula>Program__r.X25_B_Program_Service_expenses__c / Program__r.X25_A_Total_Expenses__c</formula>
    <inlineHelpText>(H) Program services as a percentage of total expenses</inlineHelpText>
    <label>(H) Program services as a percentage of</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>