force-app/main/default/objects/Registration__c/fields/Individual_contributions_gifts_grants__c.field-meta.xml
<CustomField>
    <fullName>Individual_contributions_gifts_grants__c</fullName>
    <formula>Program__r.X8_Contributions_and_Grants__c</formula>
    <label>Individual contributions, gifts, grants</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>