force-app/main/default/objects/Registration__c/fields/J_Total_charitable_program_service_expe__c.field-meta.xml
<CustomField>
    <fullName>J_Total_charitable_program_service_expe__c</fullName>
    <formula>Program__r.X25_B_Program_Service_expenses__c - Program__r.Lines_1_2_3_Grants_and_similar_amt__c</formula>
    <label>J) Total charitable program service expe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>