force-app/main/default/objects/Registration__c/fields/K_Grants_to_other_charitable_org__c.field-meta.xml
<CustomField>
    <fullName>K_Grants_to_other_charitable_org__c</fullName>
    <formula>Program__r.Lines_1_2_3_Grants_and_similar_amt__c</formula>
    <inlineHelpText>K) Grants to other charitable organizations:</inlineHelpText>
    <label>K)Grants to other charitable org</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>