force-app/main/default/objects/Registration__c/fields/L_Total_charitable_program_service_exp__c.field-meta.xml
<CustomField>
    <fullName>L_Total_charitable_program_service_exp__c</fullName>
    <formula>Program__r.X25_B_Program_Service_expenses__c</formula>
    <inlineHelpText>L) Total charitable program service expenditure:</inlineHelpText>
    <label>L) Total charitable program service exp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>