force-app/main/default/objects/Registration__c/fields/List_State_Filing_Website__c.field-meta.xml
<CustomField>
    <fullName>List_State_Filing_Website__c</fullName>
    <label>List State Filing Website</label>
    <type>Url</type>
</CustomField>