force-app/main/default/objects/Registration__c/fields/Management_General_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Management_General_Expenses__c</fullName>
    <formula>Program__r.X25_C_Management_and_general_expenses__c</formula>
    <label>Management &amp; General Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>