force-app/main/default/objects/Registration__c/fields/Net_Assets_End_of_Year__c.field-meta.xml
<CustomField>
    <fullName>Net_Assets_End_of_Year__c</fullName>
    <formula>Program__r.Net_assets_or_fund_balance__c</formula>
    <label>Net Assets, End of Year:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>