force-app/main/default/objects/Registration__c/fields/Next_Due_date__c.field-meta.xml
<CustomField>
    <fullName>Next_Due_date__c</fullName>
    <formula>End_Date__c + 180</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Due date</label>
    <type>Date</type>
</CustomField>