force-app/main/default/objects/Registration__c/fields/Noncash_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Noncash_Contributions__c</fullName>
    <formula>Program__r.X1g_Non_Cash__c</formula>
    <label>Noncash Contributions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>