force-app/main/default/objects/Registration__c/fields/of_contributions_spend_on_fundraising__c.field-meta.xml
<CustomField>
    <fullName>of_contributions_spend_on_fundraising__c</fullName>
    <formula>( Program__r.X25_C_Management_and_general_expenses__c + Program__r.X25_D_Fundraising_Expenses_Total__c )/ Program__r.X1h_Total__c</formula>
    <inlineHelpText>% of contributions spend on fundraising and administration</inlineHelpText>
    <label>% of contributions spend on fundraising</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>