force-app/main/default/objects/Registration__c/fields/Other_changes_in_net_assets_fund_balance__c.field-meta.xml
<CustomField>
    <fullName>Other_changes_in_net_assets_fund_balance__c</fullName>
    <formula>Program__r.X9_Other_change_in_net_assets_or_fund_ba__c</formula>
    <label>Other changes in net assets/fund balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>