force-app/main/default/objects/Registration__c/fields/Other_revenue__c.field-meta.xml
<CustomField>
    <fullName>Other_revenue__c</fullName>
    <formula>Program__r.X11_Other_Revenue__c</formula>
    <label>Other revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>