force-app/main/default/objects/Registration__c/fields/Other_revenues__c.field-meta.xml
<CustomField>
    <fullName>Other_revenues__c</fullName>
    <formula>Program__r.X12_1_Total_Revenue__c - Program__r.X1h_Total__c</formula>
    <label>Other revenues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>