force-app/main/default/objects/Registration__c/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <formula>Program__r.X5_Royalties__c + Program__r.X6d_Net_rental_income_or_loss__c + Program__r.X11e_Total__c</formula>
    <label>Others</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>