force-app/main/default/objects/Registration__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <description>Formula field to show related owner Full name</description>
    <formula>Owner:User.FirstName + &quot; &quot;+Owner:User.LastName</formula>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>