force-app/main/default/objects/Registration__c/fields/Payments_to_affiliates__c.field-meta.xml
<CustomField>
    <fullName>Payments_to_affiliates__c</fullName>
    <formula>Program__r.Line_21_Payments_to_affiliates__c</formula>
    <label>Payments to affiliates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>