force-app/main/default/objects/Registration__c/fields/Percentage_of_funds_directly_spent_on__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_funds_directly_spent_on__c</fullName>
    <formula>Program__r.X25_D_Fundraising_Expenses_Total__c / Program__r.X1h_Total__c</formula>
    <inlineHelpText>Percentage of funds directly spent on fundraising:</inlineHelpText>
    <label>Percentage of funds directly spent on</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>