force-app/main/default/objects/Registration__c/fields/Program_Service_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Program_Service_Revenue__c</fullName>
    <formula>Program__r.X2g_Total__c</formula>
    <label>Program Service Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>