force-app/main/default/objects/Registration__c/fields/Program_Services__c.field-meta.xml
<CustomField>
    <fullName>Program_Services__c</fullName>
    <formula>Program__r.X25_B_Program_Service_expenses__c</formula>
    <label>Program Services:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>