force-app/main/default/objects/Registration__c/fields/Program_Services_Joint_Costs__c.field-meta.xml
<CustomField>
    <fullName>Program_Services_Joint_Costs__c</fullName>
    <formula>Program__r.X26_B_Program_Service_expenses__c</formula>
    <label>Program Services(Joint Costs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>