force-app/main/default/objects/Registration__c/fields/Public_Support__c.field-meta.xml
<CustomField>
    <fullName>Public_Support__c</fullName>
    <formula>Program__r.X1e_Government_Grants__c</formula>
    <label>Public Support</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>