force-app/main/default/objects/Registration__c/fields/Registration_Health__c.field-meta.xml
<CustomField>
    <fullName>Registration_Health__c</fullName>
    <formula>IMAGE( 
CASE( Status__c , 
&quot;Completed&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;New&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Submitted&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;Processing&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Pending&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Hold for Reg. Acceptance&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Rejected&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;/s.gif&quot;), 
&quot;Priority Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Health</label>
    <type>Text</type>
</CustomField>