force-app/main/default/objects/Registration__c/fields/Renewal_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Reminder__c</fullName>
    <formula>Due_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Reminder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>