force-app/main/default/objects/Registration__c/fields/Revenue_less_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Revenue_less_Expenses__c</fullName>
    <formula>Program__r.X19_Revenue_less_expenses__c</formula>
    <label>Revenue less Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>