force-app/main/default/objects/Registration__c/fields/Salaries_Comp__c.field-meta.xml
<CustomField>
    <fullName>Salaries_Comp__c</fullName>
    <formula>Program__r.X1d_Total_Compensation__c</formula>
    <label>Salaries/Comp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>