force-app/main/default/objects/Registration__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <formula>Program__r.X10c_Net_income_or_loss_from_sales__c</formula>
    <label>Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>